# LCC

./: .gitignore  README.md
2do/AL/: README.md
2do/AL/Practicas/: notas.txt
2do/ArqDC/: README.md
2do/CM1/: README.md
2do/EDyAI/: README.md
2do/EDyAI/Tps/: README.md
2do/LFyC/: README.md  TPFRP-ArroyoJoaquin.v
2do/Logica/: README.md
2do/MN/: README.md
3ro/ALP/: README.md
3ro/Comunic/: README.md
3ro/EDyAII/: README.md
3ro/PyE/: README.md
3ro/SO1/: README.md
3ro/TBD/: README.md
4to/CM2/: README.md
4to/Compiladores/: README.md
4to/Compiladores/Compilador/: compiladores2023.cabal  testing.mk
4to/Compiladores/Compilador/src/: Bytecompile.hs  CEK.hs  Errors.hs  Eval.hs  Global.hs  Lang.hs  Main.hs  Optimizer.hs  Profile.hs  Subst.hs
4to/Compiladores/Compilador/tests/: .gitignore
4to/Compiladores/Compilador/tests/ok/00-basicos/: 001-print.fd4
4to/Compiladores/Compilador/tests/ok/10-sugar/: 100-letfun.fd4  110-letrec.fd4
4to/Compiladores/Compilador/tests/ok/20-tysym/: 100-cadena.fd4
4to/Compiladores/Compilador/tests/ok/30-Bytecode/: 001-ack.fd4  002-rec.fd4  003-example2.fd4  005-ifz.fd4
4to/Compiladores/Compilador/tests/ok/50-c/: 000-example.fd4
4to/Compiladores/Compilador/tests/ok/60-varios/: 210-inlining_unused.fd4  230-inner_rec.fd4  300-orden_call.fd4  320-print_suma.fd4  340-print.fd4  400-test_opt0.fd4  421-incs.fd4  430-canon_let.fd4  test2_7.fd4  test4_4.fd4  test5_exp_8.fd4  test6_fib_6765.fd4  test_list1_head_tail_7.fd4  test_list3_sum_21.fd4  test_list4_map_246.fd4  test_list5_foldr_60.fd4
4to/IIA/: README.md
4to/IS1/: README.md
4to/IS2/: README.md
4to/SO2/: README.md
5to/BDA/: README.md
5to/PP/: README.md
5to/SI/: README.md
5to/SSD/: README.md
5to/TT/: README.md
5to/VFS/: README.md
Optativas/BDA/: README.md
Optativas/CP/: README.md
Optativas/MSSD/: README.md
Optativas/VFS/: README.md
(+866 files in other folders)
